--- a/LogbookApp/LogbookApp/Views/TotalsPage.xaml
+++ b/LogbookApp/LogbookApp/Views/TotalsPage.xaml
@@ -18,7 +18,7 @@
         <Style TargetType="ContentControl"  x:Name="NormalStyle">
             <Setter Property="FontSize" Value="26"></Setter>
         </Style>
-      <Style TargetType="ContentControl" x:Name="SmallerStyle">
+        <Style TargetType="ContentControl" x:Name="SmallerStyle">
             <Setter Property="FontSize" Value="18"></Setter>
         </Style>
         <common:TimeSpanConverter x:Key="TimeSpanConverter"></common:TimeSpanConverter>
@@ -40,39 +40,40 @@
             <RowDefinition Height="*"/>
         </Grid.RowDefinitions>
         <ContentControl Name="TotalsContent" Grid.Row="1" Grid.Column="1">
-        <Grid >
-            <Grid.ColumnDefinitions>
-                <ColumnDefinition Width="Auto"/>
+            <Grid >
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="Auto"/>
                     <ColumnDefinition Width="20"/>
                     <ColumnDefinition Width="Auto"/>
-                <ColumnDefinition Width="*"/>
-            </Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="*"/>
+                </Grid.ColumnDefinitions>
 
-            <Grid.RowDefinitions>
-                <RowDefinition Height="40"/>
-                <RowDefinition Height="40"/>
-                <RowDefinition Height="40"/>
-                <RowDefinition Height="40"/>
-                <RowDefinition Height="40"/>
-                <RowDefinition Height="40"/>
-                <RowDefinition Height="40"/>
-                <RowDefinition Height="40"/>
+                <Grid.RowDefinitions>
+                    <RowDefinition Height="40"/>
+                    <RowDefinition Height="40"/>
+                    <RowDefinition Height="40"/>
+                    <RowDefinition Height="40"/>
+                    <RowDefinition Height="40"/>
+                    <RowDefinition Height="40"/>
+                    <RowDefinition Height="40"/>
+                    <RowDefinition Height="40"/>
+                    <RowDefinition Height="40"/>
                     <RowDefinition Height="40"/>
                     <RowDefinition Height="*"/>
 
-            </Grid.RowDefinitions>
+                </Grid.RowDefinitions>
 
-            
 
-            <TextBlock Text="Total Hours :"/>
-            <TextBlock Grid.Column="2"
+
+                <TextBlock Text="Total Hours :"/>
+                <TextBlock Grid.Column="2"
                        Text="{Binding Converter={StaticResource TimeSpanConverter},Path=Totals.Total.GrandTotal}"/>
-            <TextBlock Grid.Row="1" Text="Total SEP (PIC) :"/>
-            <TextBlock  Grid.Row="1" Grid.Column="2"
+                <TextBlock Grid.Row="1" Text="Total SEP (PIC) :"/>
+                <TextBlock  Grid.Row="1" Grid.Column="2"
                         Text="{Binding Converter={StaticResource TimeSpanConverter},Path=Totals.Total.SEPpic}"/>
-                        
-            <TextBlock Grid.Row="2" Text="Total SEP (P2/Dual) :"/>
-            <TextBlock  Grid.Row="2" Grid.Column="2"
+
+                <TextBlock Grid.Row="2" Text="Total SEP (P2/Dual) :"/>
+                <TextBlock  Grid.Row="2" Grid.Column="2"
                         Text="{Binding Converter={StaticResource TimeSpanConverter},Path=Totals.Total.SEPp2Dual}"/>
 
                 <TextBlock Grid.Row="3" Text="Total Multi (PIC) :"/>
@@ -84,24 +85,27 @@
                         Text="{Binding Converter={StaticResource TimeSpanConverter},Path=Totals.Total.MEp2Dual}"/>
 
                 <TextBlock Grid.Row="5" Text="Last 90 Days :"/>
-            <TextBlock  Grid.Row="5" Grid.Column="2"
+                <TextBlock  Grid.Row="5" Grid.Column="2"
                         Text="{Binding Converter={StaticResource TimeSpanConverter},Path= Totals.Currency90Days.GrandTotal}"/>
-            <TextBlock Grid.Row="6" Text="Last 28 Days :"/>
-            <TextBlock  Grid.Row="6" Grid.Column="2"
+                <TextBlock Grid.Row="6" Text="Last 28 Days :"/>
+                <TextBlock  Grid.Row="6" Grid.Column="2"
                         Text="{Binding  Converter={StaticResource TimeSpanConverter},Path=Totals.Currency28Days.GrandTotal}"/>
-            <TextBlock Grid.Row="7" Text="Night :"/>
+                <TextBlock Grid.Row="7" Text="Last 7 Days :"/>
                 <TextBlock  Grid.Row="7" Grid.Column="2"
-                        Text="{Binding  Converter={StaticResource TimeSpanConverter},Path=Totals.Night.GrandTotal}"/>
-           <TextBlock Grid.Row="8" Text="Instrument Flying :"/>
+                        Text="{Binding  Converter={StaticResource TimeSpanConverter},Path=Totals.Currency7Days.GrandTotal}"/>
+                <TextBlock Grid.Row="8" Text="Night :"/>
                 <TextBlock  Grid.Row="8" Grid.Column="2"
-                        Text="{Binding  Converter={StaticResource TimeSpanConverter},Path=Totals.Total.InstrumentFlying}"/>
-                <TextBlock Grid.Row="9" Text="Sim Instrument Flying :"/>
+                        Text="{Binding  Converter={StaticResource TimeSpanConverter},Path=Totals.Night.GrandTotal}"/>
+                <TextBlock Grid.Row="9" Text="Instrument Flying :"/>
                 <TextBlock  Grid.Row="9" Grid.Column="2"
+                        Text="{Binding  Converter={StaticResource TimeSpanConverter},Path=Totals.Total.InstrumentFlying}"/>
+                <TextBlock Grid.Row="10" Text="Sim Instrument Flying :"/>
+                <TextBlock  Grid.Row="10" Grid.Column="2"
                         Text="{Binding  Converter={StaticResource TimeSpanConverter},Path=Totals.Total.SimInstrumentFlying}"/>
 
 
             </Grid>
-            
+
         </ContentControl>
         <!-- Back button and page title -->
         <Grid Grid.ColumnSpan="2">
@@ -132,7 +136,7 @@
                         <ObjectAnimationUsingKeyFrames Storyboard.TargetName="backButton" Storyboard.TargetProperty="Style">
                             <DiscreteObjectKeyFrame KeyTime="0" Value="{StaticResource PortraitBackButtonStyle}"/>
                         </ObjectAnimationUsingKeyFrames>
-                        
+
                     </Storyboard>
                 </VisualState>
 
